--- a/menuRestauraci/style/general.css
+++ b/menuRestauraci/style/general.css
@@ -11,7 +11,7 @@ body {
 header,
 main {
     width: 80vw;
-    min-width: 800px;
+    min-width: 900px;
     max-width: 1200px;
     margin: auto;
 }
@@ -64,7 +64,6 @@ header {
 #categories {
     display: flex;
     justify-content: space-around;
-    background-color: #eee;
     padding: 10px;
     margin-top: 20px;
 }
@@ -82,8 +81,30 @@ header {
     margin: 20px 0;
 }
 
+#cards-container {
+    width: auto;
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    margin: 20px 0;
+}
 
-@media (max-width: 800px) {
+.card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    width: 30%;
+    min-width: 250px;
+    margin: 20px;
+    padding: 15px; 
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+}
+
+
+@media (max-width: 900px) {
     #header_buttons button {
         min-width: auto;
         width: 45px;
@@ -109,5 +130,13 @@ header {
         margin-bottom: 10px;
         display: flex;
         justify-content: center;
+    }
+
+    header,
+    main {
+        width: 100%;
+        flex-wrap: wrap;
+        padding: 5px;
+        min-width:auto;
     }
 }
