--- a/static/style/index.css
+++ b/static/style/index.css
@@ -5,7 +5,9 @@
 }
 
 body {
+    background:#eee;
     font-family: Arial, Helvetica, sans-serif
+    
 }
 
 header,
@@ -17,6 +19,7 @@ main {
 }
 
 header {
+    background-color: #333;
     justify-content: space-between;
     display: flex;
     height: auto;
