--- a/static/style/index.css
+++ b/static/style/index.css
@@ -36,19 +36,29 @@ header {
     align-items: center;
 }
 
+#header_buttons button:hover {
+    background-color: #0056b3;
+}
+
 #header_buttons button {
+    max-height: 20px;
     min-height: 45px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 0px 20px;
+    padding: 0px 10px 0px 10px;
     font-weight: bold;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     margin: 15px;
+    
+}
+
+#header_buttons .column {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 10px 0px 10px;
 }
 
 #header_buttons .button-text {
@@ -60,8 +70,7 @@ header {
 }
 
 #header_buttons .material-symbols-outlined {
-    font-size: 20px;
-    margin-right: 10px;
+    font-size: 30px;
 }
 
 #categories {
@@ -77,6 +86,10 @@ header {
     font-weight: bold;
 }
 
+#categories a:hover {
+    color: #0056b3;
+}
+
 #restaurantTitle {
     text-align: left;
     font-size: 24px;
@@ -88,7 +101,6 @@ header {
     width: auto;
     display: flex;
     flex-wrap:wrap;
-    justify-content: space-between;
     margin: 20px 0;
 }
 
