stranka vykresluje tolik karet, kolik je v databazi

--- a/app/templates/html/index.html
+++ b/app/templates/html/index.html
@@ -55,34 +55,7 @@
             <input type="text" placeholder="Vyhledat restauraci">
         </div>
         <div id="cards-container">
-            <div class="card">
-                <img src="restaurant_image.jpg">
-                <div class="card-description">
-                    <h3>Restaurant Name</h3>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="restaurant_image.jpg">
-                <div class="card-description">
-                    <h3>Restaurant Name</h3>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="restaurant_image.jpg">
-                <div class="card-description">
-                    <h3>Restaurant Name</h3>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="restaurant_image.jpg">
-                <div class="card-description">
-                    <h3>Restaurant Name</h3>
-                </div>
-            </div>
-            {% for restaurac in restaurace %}
+            {% for restaurace in restaurace %}
             <div class="card">
                 <img src="restaurant_image.jpg">
                 <div class="card-description">
