--- a/app/templates/html/menu/mujprofil.html
+++ b/app/templates/html/menu/mujprofil.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../../static/css/mujprofil.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Kategorie</title>
+    <title>Můj profil</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                     <a href="#">Osobní údaje</a>
                     <a href="#">Objednávky</a>
                     <a href="#">Platební údaje</a>
-                    <a href="#">Seznam objednvávek</a>
+                    <a href="#">Výběr objednvávek</a>
                     <a href="#">Statistika</a>
                 </nav>
             </div>
