--- a/app/templates/html/menu/platebniudaje.html
+++ b/app/templates/html/menu/platebniudaje.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/objednavky.css" type="text/css">
+    <link rel="stylesheet" href="../../../static/css/platebniudaje.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Objednavky</title>
+    <title>PlatebnÍ Údaje</title>
 </head>
 
 <body>
@@ -28,8 +28,7 @@
             </button>
             <button>
                 <div class="column">
-                    <span class="button-text">JMENO
-                        UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
+                    <span class="button-text">JMENO UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
                 </div>
                 <div class="column">
                     <span class="material-symbols-outlined">
@@ -60,38 +59,27 @@
             </div>
 
             <div class="right-section">
-                <h2>Objednávky</h2>
-                <table>
-                        <tr>
-                            <th>Cena</th>
-                            <th>Datum Vytvoření</th>
-                            <th>Stav objednávky</th>
-                        </tr>
-                        {% for objednavka in objednavky %}
-                        <tr>
-                            <td>{{ objednavka.cena }}</td>
-                            <td>{{ objednavka.vytvoreni }}</td>
-                            <td>{{ objednavka.stav_objednavky }}</td>
-                        </tr>
-                        {% endfor %}
-                </table>
-                <div class="frame">
-                    <div class="inner-frame">
-                        <span class = "value">{{ pocet_objednavek }}</span>
+                <form>
+                    <div class="form-group">
+                        <label for="jmeno">Jméno Příjmení:</label>
+                        <input type="text" id="jmeno" name="jmeno" required>
                     </div>
-                    <div class="description-frame">
-                        <span class = "description">Počet objednávek</span>
+                    <div class="form-group">
+                        <label for="karta ">Číslo karty:</label>
+                        <input type="text" id="karta" name="karta" required>
                     </div>
-                </div>
-                
-                <div class="frame">
-                    <div class="inner-frame">
-                        <span class = "value">{{ mnozstevni_sleva }} %</span>
+                    <div class="form-group">
+                        <label for="platnost">Platnost:</label>
+                        <input type="text" id="platnost" name="platnost" required>
                     </div>
-                    <div class="description-frame">
-                        <span class = "description">Množstevní sleva</span>
+                    <div class="form-group">
+                        <label for="cvc">CVC/CCV:</label>
+                        <input type="text" id="cvc" name="cvc" required>
                     </div>
-                </div>
+                    
+                </form>
+                <button type="button">Uložit kartu</button>
+            </div>
         </div>
     </main>
 </body>
