--- a/app/templates/html/menu/vyberobjednavek.html
+++ b/app/templates/html/menu/vyberobjednavek.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/objednavky.css" type="text/css">
+    <link rel="stylesheet" href="../../../static/css/vyberobjednavek.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Objednavky</title>
@@ -60,38 +60,57 @@
             </div>
 
             <div class="right-section">
-                <h2>Objednávky</h2>
+                <h2>Neodkončené objednávky</h2>
                 <table>
                         <tr>
-                            <th>Cena</th>
-                            <th>Datum Vytvoření</th>
+                            <th>ID objednavky</th>
+                            <th>Nazev restaurace</th>
+                            <th>Zakaznik ID</th>
                             <th>Stav objednávky</th>
                         </tr>
-                        {% for objednavka in objednavky %}
+                        {% for objednavka in nevyrizene %}
                         <tr>
-                            <td>{{ objednavka.cena }}</td>
-                            <td>{{ objednavka.vytvoreni }}</td>
+                            <td>{{ objednavka.objednavka_id }}</td>
+                            <td>{{ objednavka.nazev }}</td>
+                            <td>{{ objednavka.uzivatel_id }}</td>
                             <td>{{ objednavka.stav_objednavky }}</td>
                         </tr>
                         {% endfor %}
                 </table>
-                <div class="frame">
-                    <div class="inner-frame">
-                        <span class = "value">{{ pocet_objednavek }}</span>
-                    </div>
-                    <div class="description-frame">
-                        <span class = "description">Počet objednávek</span>
-                    </div>
-                </div>
-                
-                <div class="frame">
-                    <div class="inner-frame">
-                        <span class = "value">{{ mnozstevni_sleva }} %</span>
-                    </div>
-                    <div class="description-frame">
-                        <span class = "description">Množstevní sleva</span>
-                    </div>
-                </div>
+                <h2>Volné objednávky</h2>
+                <table>
+                    <tr>
+                        <th>ID objednavky</th>
+                        <th>Nazev restaurace</th>
+                        <th>Zakaznik ID</th>
+                        <th>Stav objednávky</th>
+                    </tr>
+                    {% for objednavka in volne %}
+                    <tr>
+                        <td>{{ objednavka.objednavka_id }}</td>
+                        <td>{{ objednavka.nazev }}</td>
+                        <td>{{ objednavka.uzivatel_id }}</td>
+                        <td>{{ objednavka.stav_objednavky }}</td>
+                    </tr>
+                    {% endfor %}
+            </table>
+                <h2>Vyřízené objednávky</h2>
+                <table>
+                    <tr>
+                        <th>ID objednavky</th>
+                        <th>Nazev restaurace</th>
+                        <th>Zakaznik ID</th>
+                        <th>Stav objednávky</th>
+                    </tr>
+                    {% for objednavka in vyrizene %}
+                    <tr>
+                        <td>{{ objednavka.objednavka_id }}</td>
+                        <td>{{ objednavka.nazev }}</td>
+                        <td>{{ objednavka.uzivatel_id }}</td>
+                        <td>{{ objednavka.stav_objednavky }}</td>
+                    </tr>
+                    {% endfor %}
+            </table>
         </div>
     </main>
 </body>
