--- a/app/static/css/statistika.css
+++ b/app/static/css/statistika.css
@@ -159,7 +159,6 @@ nav a:hover {
     gap: 10px;
 }
 
-
 table {
     width: 100%;
     margin-top: 20px;
@@ -179,12 +178,13 @@ th {
     font-weight: bold;
 }
 
-.frame {
+.statistics {
     display: flex;
+    justify-content: space-between;
     border-radius: 5px;
     padding: 5px;
     background-color: #fff;
-    width: 50%;
+    width: 100%;
     height: auto;
     margin: 20px auto 0px;
 }
