--- a/app/templates/html/menu/mujprofil.html
+++ b/app/templates/html/menu/mujprofil.html
@@ -55,6 +55,7 @@
                     <a href="#">Platební údaje</a>
                     <a href="#">Výběr objednvávek</a>
                     <a href="#">Statistika</a>
+                    <a href="#">Uzivatele</a>
                 </nav>
             </div>
 
