--- a/app/templates/html/menu/statistika.html
+++ b/app/templates/html/menu/statistika.html
@@ -56,6 +56,7 @@
                     <a href="#">Platební údaje</a>
                     <a href="#">Výběr objednvávek</a>
                     <a href="#">Statistika</a>
+                    <a href="#">Uzivatele</a>
                 </nav>
             </div>
 
