--- a/app/templates/html/menu/uzivatele.html
+++ b/app/templates/html/menu/uzivatele.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/platebniudaje.css" type="text/css">
+    <link rel="stylesheet" href="../../../static/css/objednavky.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>PlatebnÍ Údaje</title>
+    <title>Uzivatele</title>
 </head>
 
 <body>
@@ -28,7 +28,8 @@
             </button>
             <button>
                 <div class="column">
-                    <span class="button-text">JMENO UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
+                    <span class="button-text">JMENO
+                        UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
                 </div>
                 <div class="column">
                     <span class="material-symbols-outlined">
@@ -60,27 +61,23 @@
             </div>
 
             <div class="right-section">
-                <form>
-                    <div class="form-group">
-                        <label for="jmeno">Jméno Příjmení:</label>
-                        <input type="text" id="jmeno" name="jmeno" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="karta ">Číslo karty:</label>
-                        <input type="text" id="karta" name="karta" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="platnost">Platnost:</label>
-                        <input type="text" id="platnost" name="platnost" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="cvc">CVC/CCV:</label>
-                        <input type="text" id="cvc" name="cvc" required>
-                    </div>
-                    
-                </form>
-                <button type="button">Uložit kartu</button>
-            </div>
+                <h2>Prehled uzivatelu</h2>
+                <table>
+                        <tr>
+                            <th>ID uzivatele</th>
+                            <th>Prijmeni</th>
+                            <th>Jmeno</th>
+                            <th>Role</th>
+                        </tr>
+                        {% for uzivatel in uzivatele %}
+                        <tr>
+                            <td>{{ uzivatel.user_id }}</td>
+                            <td>{{ uzivatel.prijmeni }}</td>
+                            <td>{{ uzivatel.jmeno }}</td>
+                            <td>{{ uzivatel.nazev_role }}</td>
+                        </tr>
+                        {% endfor %}
+                </table>
         </div>
     </main>
 </body>
