filtr na restaurace

--- a/app/templates/html/index.html
+++ b/app/templates/html/index.html
@@ -41,12 +41,12 @@
     </header>
     <main>
         <div id="categories">
-            <a href="/html/kategorie/ceska.html">Česká kuchyně</a>
-            <a href="/html/kategorie/americka.html">Americká kuchyně</a>
-            <a href="/html/kategorie/asijska.html">Asijská kuchyně</a>
-            <a href="/html/kategorie/vegetarianska.html">Vegetariánská kuchyně</a>
-            <a href="/html/kategorie/streetfood.html">Streetfood</a>
-            <a href="/html/kategorie/turecka.html">Turecká kuchyně</a>
+            <a href="{{url_for('index', kategorie_id=1)}}">Česká kuchyně</a>
+            <a href="{{url_for('index', kategorie_id=2)}}">Americká kuchyně</a>
+            <a href="{{url_for('index', kategorie_id=3)}}">Asijská kuchyně</a>
+            <a href="{{url_for('index', kategorie_id=4)}}">Vegetariánská kuchyně</a>
+            <a href="{{url_for('index', kategorie_id=5)}}">Streetfood</a>
+            <a href="{{url_for('index', kategorie_id=6)}}">Turecká kuchyně</a>
         </div>
         <div id="restaurantTitle">
             <h2>Restaurace</h2>
