--- a/app/static/css/mujprofil.css
+++ b/app/static/css/mujprofil.css
@@ -216,4 +216,25 @@ input {
     #cards-container {
     justify-content: center;
     }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .right-section,
+    .left-section {
+        width: 100%;
+    }
+
+    .left-section nav {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+
+    }
+
+    nav a:hover {
+        width: auto;
+    }
 }
