--- a/app/templates/html/menu/mujprofil.html
+++ b/app/templates/html/menu/mujprofil.html
@@ -15,7 +15,9 @@
 
     <header>
         <div id="logo">
-            <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+            <a href="{{url_for('index')}}">
+                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+            </a>
         </div>
         <div id="header_buttons">
             <button>
@@ -28,7 +30,8 @@
             </button>
             <button>
                 <div class="column">
-                    <span class="button-text">JMENO UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
+                    <span class="button-text">JMENO
+                        UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
                 </div>
                 <div class="column">
                     <span class="material-symbols-outlined">
