--- a/app/templates/html/menu/objednavky.html
+++ b/app/templates/html/menu/objednavky.html
@@ -15,7 +15,9 @@
 
     <header>
         <div id="logo">
-            <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+            <a href="{{url_for('index')}}">
+                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+            </a>
         </div>
         <div id="header_buttons">
             <button>
@@ -63,37 +65,37 @@
             <div class="right-section">
                 <h2>Vaše objednávky</h2>
                 <table>
-                        <tr>
-                            <th>Cena</th>
-                            <th>Datum Vytvoření</th>
-                            <th>Stav objednávky</th>
-                        </tr>
-                        {% for objednavka in objednavky %}
-                        <tr>
-                            <td>{{ objednavka.cena }}</td>
-                            <td>{{ objednavka.vytvoreni }}</td>
-                            <td>{{ objednavka.stav_objednavky }}</td>
-                        </tr>
-                        {% endfor %}
+                    <tr>
+                        <th>Cena</th>
+                        <th>Datum Vytvoření</th>
+                        <th>Stav objednávky</th>
+                    </tr>
+                    {% for objednavka in objednavky %}
+                    <tr>
+                        <td>{{ objednavka.cena }}</td>
+                        <td>{{ objednavka.vytvoreni }}</td>
+                        <td>{{ objednavka.stav_objednavky }}</td>
+                    </tr>
+                    {% endfor %}
                 </table>
                 <div class="frame">
                     <div class="inner-frame">
-                        <span class = "value">{{ pocet_objednavek }}</span>
+                        <span class="value">{{ pocet_objednavek }}</span>
                     </div>
                     <div class="description-frame">
-                        <span class = "description">Počet objednávek</span>
+                        <span class="description">Počet objednávek</span>
                     </div>
                 </div>
-                
+
                 <div class="frame">
                     <div class="inner-frame">
-                        <span class = "value">{{ mnozstevni_sleva }} %</span>
+                        <span class="value">{{ mnozstevni_sleva }} %</span>
                     </div>
                     <div class="description-frame">
-                        <span class = "description">Množstevní sleva</span>
+                        <span class="description">Množstevní sleva</span>
                     </div>
                 </div>
-        </div>
+            </div>
     </main>
 </body>
 
