--- a/app/templates/html/menu/vyberobjednavek.html
+++ b/app/templates/html/menu/vyberobjednavek.html
@@ -15,7 +15,9 @@
 
     <header>
         <div id="logo">
-            <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+            <a href="{{url_for('index')}}">
+                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+            </a>
         </div>
         <div id="header_buttons">
             <button>
