--- a/app/templates/html/produkty.html
+++ b/app/templates/html/produkty.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/css/index.css" type="text/css">
+    <link rel="stylesheet" href="../../static/css/produkty.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Kategorie</title>
+    <title>TODO</title>
 </head>
 
 <body>
+
     <header>
         <div id="logo">
             <a href="{{url_for('index')}}">
-            <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
             </a>
         </div>
         <div id="header_buttons">
@@ -50,24 +51,22 @@
             <a href="{{url_for('index', kategorie_id=6)}}">Turecká kuchyně</a>
         </div>
         <div id="restaurantTitle">
-            <h2>Restaurace</h2>
-            {% if kategorie != None %}
-                <h2>{{kategorie.nazev}}</h2>
+            {% if restaurace == None %}
+            <h2>Zvolte si prvni restauraci</h2>
+            {% else %}
+            <h2>{{restaurace.nazev}}</h2>
             {% endif %}
         </div>
         <div class="searchbar">
             <input type="text" placeholder="Vyhledat restauraci">
         </div>
         <div id="cards-container">
-
-            {% for restaurace in restaurace %}
+            {% for produkt in produkty %}
             <div class="card">
                 <img src="restaurant_image.jpg">
-                <a  href="{{url_for('view_produkty_page', restaurace_id=restaurace.restaurace_id)}}">
                 <div class="card-description">
-                    <h3>{{ restaurace.nazev }}</h3>
+                    <h3>{{ produkt.nazev }}</h3>
                 </div>
-                </a>
             </div>
             {% endfor %}
         </div>
