--- a/app/templates/html/menu/mujprofil.html
+++ b/app/templates/html/menu/mujprofil.html
@@ -43,6 +43,7 @@
     </header>
     <main>
         <div id="categories">
+            <!--opravit odkazy-->
             <a href="/html/kategorie/ceska.html">Česká kuchyně</a>
             <a href="/html/kategorie/americka.html">Americká kuchyně</a>
             <a href="/html/kategorie/asijska.html">Asijská kuchyně</a>
