--- a/app/static/css/mujprofil.css
+++ b/app/static/css/mujprofil.css
@@ -139,7 +139,7 @@ nav a:hover {
 }
 
 .right-section button {
-    background-color: #001f3f;
+    background-color: #007bff;
     color: white;
     border: none;
     padding: 10px;
@@ -150,7 +150,7 @@ nav a:hover {
 
 
 .right-section button:hover {
-    background-color: #2c3e50;
+    background-color: #0056b3;
     font-weight: bold;
     color: #fff;
 }
