--- a/app/static/css/uzivatele.css
+++ b/app/static/css/uzivatele.css
@@ -137,7 +137,7 @@ nav a:hover {
 }
 
 .right-section button {
-    background-color: #001f3f;
+    background-color: #007bff;
     color: white;
     border: none;
     padding: 10px;
@@ -148,7 +148,7 @@ nav a:hover {
 
 
 .right-section button:hover {
-    background-color: #2c3e50;
+    background-color: #0056b3;
     font-weight: bold;
     color: #fff;
 }
@@ -216,6 +216,15 @@ th {
     display: block;
     padding: 5px;
     color: #000;
+}
+
+.dropdown {
+    margin: 20px;
+}
+
+#myDropdown {
+    padding: 8px;
+    font-size: 16px;
 }
 
 @media (max-width: 900px) {
