--- a/app/templates/html/produkty.html
+++ b/app/templates/html/produkty.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../static/css/produkty.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>TODO</title>
+    <title>{{restaurace.nazev}}</title>
 </head>
 
 <body>
