--- a/app/static/css/vyberobjednavek.css
+++ b/app/static/css/vyberobjednavek.css
@@ -137,7 +137,7 @@ nav a:hover {
 }
 
 .right-section button {
-    background-color: #001f3f;
+    background-color: #007bff;
     color: white;
     border: none;
     padding: 10px;
@@ -148,7 +148,7 @@ nav a:hover {
 
 
 .right-section button:hover {
-    background-color: #2c3e50;
+    background-color: #0056b3;
     font-weight: bold;
     color: #fff;
 }
