--- a/app/templates/html/menu/vyberobjednavek.html
+++ b/app/templates/html/menu/vyberobjednavek.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/vyberobjednavek.css" type="text/css">
+    <link rel="stylesheet" href="../../../static/css/style.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Objednavky</title>
@@ -88,6 +88,7 @@
                     </tr>
                     {% endfor %}
                 </table>
+                <br>
                 <h2>Volné objednávky</h2>
                 <table>
                     <tr>
@@ -113,6 +114,7 @@
                     </tr>
                     {% endfor %}
                 </table>
+                <br>
                 <h2>Vyřízené objednávky</h2>
                 <table>
                     <tr>
