--- a/app/templates/html/objednani.html
+++ b/app/templates/html/objednani.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/css/objednani.css" type="text/css">
+    <link rel="stylesheet" href="../../static/css/style.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Kategorie</title>
@@ -61,7 +61,7 @@
             class="{{ 'active' if show_unavailable else '' }}">Zobrazit dostupne</a> |
         <a href="?restaurace_id={{ restaurace.restaurace_id }}&limited=true"
             class="{{ 'active' if show_limited else '' }}">Limited</a>
-        {% endif %}
+
         <table class="objednani">
             <tr>
                 <th>Název jídla</th>
@@ -83,6 +83,7 @@
             {% endfor %}
         </table>
         <button class="order-btn">Objednat</button>
+        {% endif %}
     </main>
 
 
