--- a/app/templates/html/menu/registrace.html
+++ b/app/templates/html/menu/registrace.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="../../../static/css/registrace.css" type="text/css">
+    <link rel="stylesheet" href="../../../static/css/formulare-style.css" type="text/css">
     <title>Registrace</title>
 
 </head>
